Fixed layout issue where elements extended beyond wrapper when using a shorter vireport than the elements height.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@ body {
 
 #wrapper {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	position: relative;
 	padding: 1rem 0.5rem;
 	background-color: var(--back-1);
